# chunking_evaluation

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
chroma_research/: __init__.py  utils.py
chroma_research/benchmarking/: base_benchmark.py  general_benchmark.py  synthetic_benchmark.py
chroma_research/benchmarking/general_benchmark_data/: questions_df.csv
chroma_research/chunking/: __init__.py  cluster_semantic_chunker.py  kamradt_modified_chunker.py  llm_semantic_chunker.py  recursive_token_chunker.py
chunking_benchmark/benchmarking/: base_benchmark.py  general_benchmark.py  synthetic_benchmark.py
chunking_benchmark/benchmarking/prompts/: question_maker_system.txt
chunking_benchmark/chunking/: cluster_semantic_chunker.py  fixed_token_chunker.py  kamradt_modified_chunker.py  llm_semantic_chunker.py  recursive_token_chunker.py
chunking_evaluation/: __init__.py  utils.py
chunking_evaluation/benchmarking/: base_benchmark.py  general_benchmark.py  synthetic_benchmark.py
chunking_evaluation/benchmarking/prompts/: question_maker_approx_system.txt  question_maker_user.txt
chunking_evaluation/chunking/: cluster_semantic_chunker.py  llm_semantic_chunker.py  recursive_token_chunker.py
chunking_evaluation/evaluation_framework/: base_evaluation.py  dataset_evaluation.py  evaluation_utils.py  general_evaluation.py  synthetic_evaluation.py
notebook/: Chroma_Research.ipynb
src/chunking_evaluation/: __init__.py  utils.py
src/chunking_evaluation/chunking/: __init__.py  base_chunker.py  (+4 more)
tests/: test_dataset_evaluation.py
(+9 files in other folders)
